chore: save local CBSE modifications and new artifacts
